--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,14 +12,14 @@ body {
     width: 200px;
 }
 
-.custom-card {
+.card-personalizado {
     background-color: transparent;
     border: none;
     box-shadow: none;
     color: white;
   }
   
-  .custom-card .card-body {
+  .card-personalizado .card-body {
     background-color: transparent;
     padding: 1.5rem;
     text-align: center;
@@ -29,12 +29,12 @@ body {
     margin-top: 120px;
   }
 
-  .custom-card .card-title {
+  .card-personalizado .titulo-card {
     font-size: 1.8rem;
     font-weight: bold;
   }
   
-  .custom-card .card-text {
+  .card-personalizado .texto-card {
     font-size: 1.2rem;
   }
   
